# syncmark

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md
.bodhi/: bodhi.yaml
.bodhi/entities/: ai_analyses.yaml  economic_events.yaml  klines.yaml  news.yaml  rotation_signals.yaml  smart_money_moves.yaml  telegram_messages.yaml  whale_transfers.yaml
.bodhi/events/: cex_kline.yaml  cex_large_order.yaml  chain_smart_money.yaml  chain_whale_transfer.yaml  economic_event_analyzed.yaml  large_order_alert.yaml  macro_economic_event.yaml  macro_event_published.yaml  news_analyzed.yaml  rotation_alert.yaml  telegram_raw_message.yaml  whale_alert.yaml
.claude/: settings.json
analyzer/: pyproject.toml
analyzer/analyzer/: __init__.py  config.py  db.py  main.py  redis_client.py
analyzer/analyzer/api/: routes.py
analyzer/analyzer/consumers/: base.py  kline_consumer.py  large_order_consumer.py  macro_consumer.py  rotation_scheduler.py  telegram_consumer.py  whale_consumer.py
analyzer/analyzer/context/: aggregator.py
analyzer/analyzer/llm/: client.py  prompts.py
analyzer/analyzer/pipelines/: ai_qa.py  economic_pipeline.py  large_order_pipeline.py  news_pipeline.py  rotation_pipeline.py  whale_pipeline.py
analyzer/analyzer/publisher/: redis_publisher.py
analyzer/analyzer/repository/: ai_analysis_repo.py  economic_repo.py  kline_repo.py  models.py  news_query.py  news_repo.py  rotation_repo.py  telegram_repo.py
analyzer/configs/: analyzer.yaml
collector/: go.mod  go.sum
docs/: MOBILE_DESIGN.md  REQUIREMENTS.md  prototype.html  rotation-overview.html
(+35 files in other folders)
